# GlobalProtect-SAML-NetworkManager

./: .dockerignore  .gitignore  .gitmodules  BUILD.md  CLAUDE_INSTRUCTIONS.md  Dockerfile.ubuntu22.04  Dockerfile.ubuntu24.04  Dockerfile.ubuntu26.04  Makefile  PACKAGING.md  README.md  TESTING_UBUNTU_22.04.md  build-all.sh  clean-cache.sh  vpnc-script
.github/workflows/: build-release.yml
config/: 90-gpclient-routing  nm-gpclient.conf  nm-gpclient.service  org.freedesktop.NetworkManager.gpclient.service
debian/: changelog  control  control.ubuntu22.04  control.ubuntu24.04  control.ubuntu26.04  copyright  network-manager-gpclient-gnome.install  network-manager-gpclient-gnome.links  network-manager-gpclient-plasma.install  network-manager-gpclient.postinst  network-manager-gpclient.postrm  postinst  postrm  rules
docs/: BUILD.md  EDGE_WRAPPER.md  GNOME_SETTINGS_INTEGRATION.md  PACKAGING.md  PLASMA_IMPLEMENTATION.md  PYTHON_SERVICE.md  README.md  TESTING.md
plugins/gnome/: Makefile  nm-gpclient-editor-gtk3.c  nm-gpclient-editor-plugin.c  nm-gpclient-editor-plugin.h  nm-gpclient-editor.c  nm-gpclient-editor.h  nm-gpclient-plugin-simple.c  nm-gpclient-service.name  nm-vpn-plugin-utils.c
plugins/plasma/: .gitignore  BUILD_SUCCESS.md  CMakeLists.txt  README.md  build.sh  gpclientui.cpp  gpclientui.h  gpclientwidget.cpp  gpclientwidget.h  gpclientwidget.ui  plasmanetworkmanagement_gpclientui.desktop  plasmanetworkmanagement_gpclientui.json
plugins/plasma/include/: plasmanm_editor_export.h
scripts/: edge-wrapper.sh
service/: nm-gpclient-service.py
tests/: README.md  conftest.py  test_gnome_settings.py  test_nm_connection_editor.py
tests/helpers/: __init__.py  dogtail_utils.py  screenshot.py
